--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
+    "google-auth-library": "^7.5.0",
     "googleapis": "^84.0.0",
     "nodemon": "^2.0.12",
     "readline": "^1.3.0"
