--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "google-auth-library": "^7.5.0",
     "googleapis": "^84.0.0",
     "nodemon": "^2.0.12",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {},
   "scripts": {
